package domain;

public enum Tipo {

	PERIFERICO, HARDWARE, LIMPIEZA;

}
